// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The GuStackSet construct should correctly provision a stack with a stack set resource 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStack",
      "GuStackSet",
    ],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "StackSet": {
      "Properties": {
        "AutoDeployment": {
          "Enabled": true,
          "RetainStacksOnAccountRemoval": false,
        },
        "Description": "this stack set provisions some common infrastructure",
        "Parameters": [],
        "PermissionModel": "SERVICE_MANAGED",
        "StackInstancesGroup": [
          {
            "DeploymentTargets": {
              "OrganizationalUnitIds": [
                "o-12345abcde",
              ],
            },
            "Regions": [
              {
                "Ref": "AWS::Region",
              },
            ],
          },
        ],
        "StackSetName": "my-stack-set",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "TemplateBody": "{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStackForStackSetInstance",
      "GuKinesisStream"
    ],
    "gu:cdk:version": "TEST"
  },
  "Resources": {
    "accountloggingstreamB8733874": {
      "Type": "AWS::Kinesis::Stream",
      "Properties": {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": {
          "Fn::If": [
            "AwsCdkKinesisEncryptedStreamsUnsupportedRegions",
            {
              "Ref": "AWS::NoValue"
            },
            {
              "EncryptionType": "KMS",
              "KeyId": "alias/aws/kinesis"
            }
          ]
        },
        "StreamModeDetails": {
          "StreamMode": "PROVISIONED"
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk"
          },
          {
            "Key": "Stack",
            "Value": "test"
          },
          {
            "Key": "Stage",
            "Value": "TEST"
          }
        ]
      }
    }
  },
  "Conditions": {
    "AwsCdkKinesisEncryptedStreamsUnsupportedRegions": {
      "Fn::Or": [
        {
          "Fn::Equals": [
            {
              "Ref": "AWS::Region"
            },
            "cn-north-1"
          ]
        },
        {
          "Fn::Equals": [
            {
              "Ref": "AWS::Region"
            },
            "cn-northwest-1"
          ]
        }
      ]
    }
  }
}",
      },
      "Type": "AWS::CloudFormation::StackSet",
    },
  },
}
`;

exports[`The GuStackSet construct should support parameters in the stack set instance 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStack",
      "GuSnsTopic",
      "GuStackSet",
    ],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "StackSet": {
      "Properties": {
        "AutoDeployment": {
          "Enabled": true,
          "RetainStacksOnAccountRemoval": false,
        },
        "Description": "this stack set provisions some common infrastructure",
        "Parameters": [
          {
            "ParameterKey": "CentralSnsTopicArn",
            "ParameterValue": {
              "Ref": "accountalertsD9982E6F",
            },
          },
        ],
        "PermissionModel": "SERVICE_MANAGED",
        "StackInstancesGroup": [
          {
            "DeploymentTargets": {
              "OrganizationalUnitIds": [
                "o-12345abcde",
              ],
            },
            "Regions": [
              {
                "Ref": "AWS::Region",
              },
            ],
          },
        ],
        "StackSetName": "my-stack-set",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "TemplateBody": "{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStackForStackSetInstance",
      "GuStringParameter"
    ],
    "gu:cdk:version": "TEST"
  },
  "Parameters": {
    "CentralSnsTopicArn": {
      "Type": "String",
      "AllowedPattern": "arn:aws:[a-z0-9]*:[a-z0-9\\\\-]*:[0-9]{12}:.*"
    }
  }
}",
      },
      "Type": "AWS::CloudFormation::StackSet",
    },
    "accountalertsD9982E6F": {
      "Properties": {
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
    "accountalertsPolicy8E37A8FA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Condition": {
                "StringEquals": {
                  "aws:PrincipalOrgID": "o-12345abcde",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Ref": "accountalertsD9982E6F",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "accountalertsD9982E6F",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
  },
}
`;
